--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4570,6 +4570,7 @@
   pages     = {103-117},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {http://www.johncolarusso.net/pdf/Dumezil&Details-98.pdf},
 }
 
 @Book{Coleman1961,
@@ -4817,6 +4818,7 @@
   number    = {3},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {http://www.dlib.org/dlib/march06/crane/03crane.html},
 }
 
 @InProceedings{Cristinacce2006,
@@ -4851,6 +4853,7 @@
   pages     = {1695},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {http://www.interjournal.org/manuscript_abstract.php?361100992},
 }
 
 @Book{Csermely2006,
@@ -5195,6 +5198,7 @@
   pages     = {24-35},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.jstor.org/stable/41064774},
 }
 
 @Article{dAstous2005,
@@ -5206,6 +5210,7 @@
   pages     = {32-45},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.jstor.org/stable/41064774},
 }
 
 @Article{Davidson2000,
@@ -5782,6 +5787,7 @@
   pages     = {19-53},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.historyireland.com/medieval-history-pre-1500/the-battle-of-clontarf-in-irish-history-and-legend/},
 }
 
 @Book{Downham2007,
@@ -10356,6 +10362,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {281-305},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {10.1215/00031283-79-3-281},
 }
 
 @InProceedings{Kim2004,
@@ -11197,12 +11204,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Landauer2007,
-  title     = {Handbook of latent semantic analysis.},
+  title     = {Handbook of latent semantic analysis},
   publisher = {Erlbaum},
   year      = {2007},
   author    = {Landauer, T. and McNamara, D. S. and Dennis, S. and Kintsch, W.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://psycnet.apa.org/record/2007-04818-000},
 }
 
 @Book{Langlet2006,
@@ -11281,6 +11289,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Latour, B.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {http://www.bruno-latour.fr/node/70},
 }
 
 @Article{Lavin1998,
@@ -11291,6 +11300,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {24},
   number    = {2},
   pages     = {47-64},
+  doi       = {10.1016/S0098-7913(99)80118-X},
   owner     = {Vincent},
   timestamp = {2019.04.07},
 }
@@ -11392,6 +11402,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ledoux, J.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://nyuscholars.nyu.edu/en/publications/neurobiology-of-emotion},
 }
 
 @Article{LeDoux2012,
@@ -11426,6 +11437,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {LeDoux, J. E. and Barrett, L. F. and Russell, J. A.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.guilford.com/books/The-Psychological-Construction-of-Emotion/Barrett-Russell/9781462516971/contents},
 }
 
 @Article{Lee1999,
@@ -11584,6 +11596,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Cambridge University Press},
   year      = {2005},
   author    = {Leggatt, A.},
+  doi       = {10.1017/CBO9780511483660},
   owner     = {Vincent},
   timestamp = {2019.04.06},
 }
@@ -11653,6 +11666,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Lethbridge, S. and Mildorf, J.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.semanticscholar.org/paper/%3A-Basics-of-English-Studies-%3A-An-introductory-for-MILDORF/2ab49ba22914818ace7a2d08689418a7447fa986},
 }
 
 @Book{Levenson1987,
@@ -11662,6 +11676,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Levenson, J. L.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Romeo_and_Juliet.html?id=Iy7oAAAAIAAJ&redir_esc=y},
 }
 
 @Book{Levine2015,
@@ -11671,6 +11686,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Levine, C.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://press.princeton.edu/titles/10392.html},
 }
 
 @Article{Ley2009,
@@ -12615,6 +12631,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Mackie, H. S.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://rowman.com/ISBN/9780847682546/Talking-Trojan-Speech-and-Community-in-the-Iliad},
 }
 
 @InProceedings{Mademlis2016,
@@ -12636,6 +12653,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Madsen, D. L.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://trove.nla.gov.au/work/30362421?q&versionId=36848564},
 }
 
 @Article{Mahlberg2012,
@@ -12763,6 +12781,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Manning, C. D. and Schutze, H.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://nlp.stanford.edu/fsnlp/},
 }
 
 @InProceedings{Manning2014,
@@ -12782,6 +12801,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Mantegna, R. N. and Stanley, H. E.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://dl.acm.org/citation.cfm?id=322494},
 }
 
 @Article{Mar2008,
@@ -13159,6 +13179,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {McCarthy, D. P.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.worldcat.org/title/irish-annals-their-genesis-evolution-and-history/oclc/214309762},
 }
 
 @Book{McCarty2005,
@@ -13271,6 +13292,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {McGettigan, D.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.fourcourtspress.ie/books/2013/battle-of-clontarf-good-friday-1014/},
 }
 
 @Article{McGuffin2012,
@@ -13305,6 +13327,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {McKee, R.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://mckeestory.com/books/story/},
 }
 
 @Electronic{McNary2019,
@@ -13383,6 +13406,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Meillet, A.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://gallica.bnf.fr/ark:/12148/bpt6k934150p.image},
 }
 
 @Article{Meltzoff1990,
@@ -13428,6 +13452,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {72-73},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.jstor.org/stable/30005631},
 }
 
 @InProceedings{MeyerzuEissen2004,
@@ -13508,6 +13533,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {1983},
   volume    = {1},
   pages     = {159-204},
+  doi       = {10.2307/743849},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -13871,6 +13897,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Moreno, J. L.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://psycnet.apa.org/record/2005-00641-000},
 }
 
 @Book{Moretti1987,
@@ -13918,12 +13945,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{Moretti2006,
-  title     = {The Novel Princeton University Press, 2006.},
+  title     = {The Novel},
   publisher = {Princeton University Press},
   year      = {2006},
   author    = {Moretti, F.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://books.google.fr/books/about/The_Novel_History_geography_and_culture.html?id=BKkNAQAAMAAJ&redir_esc=y},
 }
 
 @Article{Moretti2009,
@@ -13934,6 +13962,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {36},
   number    = {1},
   pages     = {134-158},
+  doi       = {10.1086/606125},
   owner     = {Vincent},
   timestamp = {2019.04.08},
 }
@@ -13969,6 +13998,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Moretti, F.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://www.versobooks.com/books/1421-distant-reading},
 }
 
 @Article{Moretti2017,
@@ -14059,6 +14089,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Mostellar, F. and Wallace, D. L.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {10.1007/978-1-4612-5256-6},
 }
 
 @Article{Mosteller1963,
@@ -14081,6 +14112,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Mosteller, F. and Wallace, D.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://web.stanford.edu/group/cslipublications/cslipublications/site/1575865521.shtml},
 }
 
 @InProceedings{Mott2006,
@@ -14853,6 +14885,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {73-89},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.vanhamel.nl/codecs/Nic_Ghiollamhaith_1981a},
 }
 
 @InProceedings{Nielsen2011,
@@ -14886,6 +14919,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {135-158},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.jstor.org/stable/30007422},
 }
 
 @Article{NiMhaonaigh1995,
@@ -14910,6 +14944,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {101-126},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.jstor.org/stable/30007439},
 }
 
 @Article{NiMhaonaigh1997,
@@ -14977,6 +15012,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ní Úrdail, M.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.vanhamel.nl/codecs/N%C3%AD_%C3%9Ardail_2011a},
 }
 
 @Article{Noh2005,
@@ -15092,6 +15128,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ó Corráin, D.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.vanhamel.nl/codecs/%C3%93_Corr%C3%A1in_(Donnchadh)},
 }
 
 @InCollection{OCorrain1997,
@@ -15413,6 +15450,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {33-41},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {http://revista-redes.rediris.es/pdf-vol21/vol21_2e.pdf},
 }
 
 @TechReport{Page1998,
@@ -15653,6 +15691,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Parker, P.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Literary_Fat_Ladies.html?id=JZcOAAAAQAAJ&redir_esc=y},
 }
 
 @Article{Parker1998,
@@ -15675,6 +15714,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Partridge, E.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://trove.nla.gov.au/work/13538000?q&sort=holdings+desc&_=1555687627395&versionId=26333990},
 }
 
 @InProceedings{Pascal2008,
@@ -15779,6 +15819,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Pennebaker, J. W. and Francis, M. E. and Booth, R. J.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://researchspace.auckland.ac.nz/handle/2292/18109},
 }
 
 @InProceedings{Pennington2014,
@@ -15812,6 +15853,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {18},
   number    = {5},
   pages     = {781-795},
+  doi       = {10.1287/orsc.1070.0283},
   owner     = {Vincent},
   timestamp = {2019.04.10},
 }
@@ -15958,6 +16000,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Pierce, G.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://archive.org/details/dickensdictionar01pier/page/n4},
 }
 
 @InProceedings{Pilszy2009,
@@ -16047,6 +16090,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {1},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+  url       = {https://www.elsevier.com/books/theories-of-emotion/plutchik/978-0-12-558701-3},
 }
 
 @InProceedings{Poblete2011,
@@ -16223,6 +16267,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Prell, C.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book231856},
 }
 
 @InProceedings{Prez2006,
@@ -16245,6 +16290,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Prince, G.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://books.google.fr/books/about/A_Dictionary_of_Narratology.html?id=WvRNGan8YZcC&redir_esc=y},
 }
 
 @Book{Propp1984,
@@ -16256,6 +16302,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   series    = {Theory and history of literature},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.jstor.org/stable/10.5749/j.ctttv14w},
 }
 
 @Article{Przulj2007,
@@ -16375,6 +16422,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   series    = {Studies in Corpus Linguistics},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://benjamins.com/catalog/scl.36},
 }
 
 @InProceedings{Quan2010,
@@ -16471,6 +16519,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ramsay, S.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.jstor.org/stable/10.5406/j.ctt1xcmrr},
 }
 
 @Article{Rand2011,
@@ -16655,6 +16704,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Reed, T.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://www.crcpress.com/Digital-Image-Sequence-Processing-Compression-and-Analysis/Reed/p/book/9780849315268},
 }
 
 @Article{Reis2011,
@@ -16737,6 +16787,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {121-131},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {https://www.earticle.net/Article/A224437},
 }
 
 @Article{Ribeiro2016,
@@ -16850,6 +16901,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Rieu, E. V.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://www.penguin.co.uk/books/256482/the-iliad/9780141394657.html},
 }
 
 @Book{Rieu2003a,
@@ -16859,6 +16911,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Rieu, E. V.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.penguinrandomhouse.com/books/286335/the-odyssey-by-homer/9780140449112/},
 }
 
 @InProceedings{Rigaud2011,
@@ -17055,6 +17108,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Rimmon-Kenan, S.},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+  url       = {https://books.google.fr/books/about/Narrative_Fiction.html?id=a2CBAgAAQBAJ&redir_esc=y},
 }
 
 @Electronic{Rinehart2017,
@@ -17076,6 +17130,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Ripley, R. M. and Snijders, T. A. B. and Preciado, P.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {http://www.stats.ox.ac.uk/~snijders/siena/RSiena_Manual.pdf},
 }
 
 @InProceedings{Rital2005,
@@ -17212,6 +17267,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Rogers, E. M. and Kincaid, D. L.},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://books.google.fr/books/about/Communication_networks.html?id=r3tiAAAAMAAJ&redir_esc=y},
 }
 
 @InProceedings{Rohrer1998,
@@ -17456,6 +17512,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Russell, G. and Tuite, C.},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+  url       = {https://books.google.fr/books/about/Romantic_Sociability.html?id=_FhPV1zaccoC&redir_esc=y},
 }
 
 @InProceedings{Rusu2008,
@@ -17488,6 +17545,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {1-50},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.jstor.org/stable/25510093},
 }
 
 @Article{Ryan1940,
@@ -17497,6 +17555,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {1940},
   volume    = {2},
   pages     = {93-97},
+  doi       = {10.1017/S0021121400111915},
   owner     = {Vincent},
   timestamp = {2019.04.06},
 }
@@ -17582,6 +17641,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {17},
   number    = {2},
   pages     = {231-244},
+  doi       = {10.1093/llc/17.2.231},
   owner     = {Vincent},
   timestamp = {2019.04.08},
 }
@@ -17840,6 +17900,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {164-186},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+  url       = {https://www.jstor.org/stable/40919258},
 }
 
 @Article{Scala2001,
@@ -17886,6 +17947,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Schank, R. C. and Abelson, R. P.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://books.google.fr/books/about/Scripts_Plans_Goals_and_Understanding.html?id=YZ99AAAAMAAJ&redir_esc=y},
 }
 
 @Article{Schich2014,
@@ -18341,6 +18403,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Simmel, G.},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+  url       = {https://archive.org/details/sociologyofgeorg030082mbp},
 }
 
 @Article{Simons2008,
@@ -18587,6 +18650,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   volume    = {20},
   number    = {4},
   pages     = {391-402},
+  doi       = {10.1093/eic/XX.4.391},
   owner     = {Vincent},
   timestamp = {2019.04.12},
 }
@@ -19458,7 +19522,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Teague1986,
   author    = {Teague, F.},
-  title     = {Othello and new comedy},
+  title     = {``Othello'' and new comedy},
   journal   = {Comparative Drama},
   year      = {1986},
   volume    = {20},
@@ -19466,6 +19530,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {54-64},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://www.jstor.org/stable/41153213},
 }
 
 @Article{Tehrani2013,
@@ -19494,11 +19559,12 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Book{Thomas2005,
   title     = {Illuminating the Path: The Research and Development Agenda for Visual Analytics},
-  publisher = {National Visualization and Analytics Center.},
+  publisher = {National Visualization and Analytics Center},
   year      = {2005},
   author    = {Thomas, J. J. and Cook, K. A.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.hsdl.org/?abstract&did=485291},
 }
 
 @Book{Thompson2003,
@@ -19508,6 +19574,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Thompson, K.},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+  url       = {http://www.hup.harvard.edu/catalog.php?isbn=9780674010871},
 }
 
 @Book{Thomson1952,
@@ -19572,6 +19639,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Tillyard, E. M. W.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://archive.org/details/shakespearesprob032517mbp/page/n8},
 }
 
 @InProceedings{Titov2008,
@@ -19592,6 +19660,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Tobias, R. B.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://books.google.fr/books/about/20_Master_Plots.html?id=weyPCdjO4g0C&source=kp_book_description&redir_esc=y},
 }
 
 @Article{Tobler2010,
@@ -19614,6 +19683,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Tolmie, D. F. and Zimmermann, R. and Hunt, S.},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+  url       = {https://www.eerdmans.com/Products/7392/character-studies-in-the-fourth-gospel.aspx},
 }
 
 @Book{Tompkins1961,
@@ -19706,6 +19776,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {200711},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+  url       = {https://www.semanticscholar.org/paper/Learning-Event-Patterns-from-Text-Trampus-Mladen%C3%AD/10e3f71f9e9005e0cfee327e71e8658cf39343ac},
 }
 
 @Article{Tran2015,
