updated bibtex file

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -17169,6 +17169,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@Electronic{Robinson2015,
+  author       = {Robinson, D.},
+  month        = {12},
+  year         = {2015},
+  title        = {Analyzing networks of characters in '{Love Actually}'},
+  howpublished = {\url{http://varianceexplained.org/r/love-actually-network/}},
+  organization = {{Variance Explained}},
+  url          = {http://varianceexplained.org/r/love-actually-network/},
+  groups       = {Character Nets},
+  owner        = {Vincent},
+  timestamp    = {2019.04.26},
+}
+
 @InProceedings{Robnik-Sikonja1997,
   author    = {Robnik-Sikonja, M. and Kononenko, I.},
   title     = {An adaptation of Relief for attribute estimation in regression},
