updated bibtex file

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5338,6 +5338,19 @@
   timestamp     = {2018.10.25},
 }
 
+@Article{Dekker2019,
+  author    = {Dekker, N. and Kuhn, T. and van Erp, M.},
+  title     = {Evaluating named entity recognition tools for extracting social networks from novels},
+  journal   = {PeerJ Computer Science},
+  year      = {2019},
+  volume    = {5},
+  pages     = {e189},
+  doi       = {10.7717/peerj-cs.189},
+  groups    = {Character Nets},
+  owner     = {Vincent},
+  timestamp = {2019.04.27},
+}
+
 @InProceedings{Deleris2018,
   author    = {Deleris, L. A. and Bonin, F. and Daly, E. and Deparis, S. and Hou, Y. and Jochim, C. and Lassoued, Y. and Levacher, K.},
   title     = {Know Who Your Friends Are: Understanding Social Connections from Unstructured Text},
@@ -21873,6 +21886,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.12},
   url       = {http://www.aclweb.org/anthology/I17-2055},
+}
+
+@Article{Yeung2019,
+  author    = {Yeung, C. Y. and Lee, J.},
+  title     = {Dialogue analysis: a case study on the New Testament},
+  journal   = {Language Resources and Evaluation},
+  year      = {2019},
+  volume    = {in press},
+  doi       = {10.1007/s10579-019-09461-9},
+  owner     = {Vincent},
+  timestamp = {2019.05.08},
 }
 
 @Article{Yi2010,
